--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 *{
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
     color: rgb(10, 35, 45);
@@ -171,4 +171,10 @@ input{
 
 #category{
     font-size: 4rem;
+}
+
+/* When Game is Over */
+
+p#results-p{
+    font-size: 1.6rem;
 }
